# QMeta

./: .gitignore  CMakeLists.txt  README.md  qMeta.qmlproject  qmlmodules
.cache/clangd/index/: app_environment.h.A5E56E3EEE750DB9.idx  controller.cpp.135E6E6FC8D28232.idx  controller.h.CC32CA8BE3A67ED0.idx  filemodel.cpp.C4A18101B50C643B.idx  filemodel.h.07EEEF5ED626631C.idx  import_qml_components_plugins.h.40B64504DA383AC9.idx  import_qml_plugins.h.16CC90297B1516A8.idx  main.cpp.423241B811DB536E.idx  metamodel.cpp.A5105048D146E237.idx  metamodel.h.A74D84F89D3C180D.idx
content/: App.qml  CMakeLists.txt  MetaMap.qml  Screen01.ui.qml  controller.cpp  controller.h  fileexplorercontroller.cpp  fileexplorercontroller.h  filemodel.cpp  filemodel.h  metamodel.cpp  metamodel.h
content/components/: CopyButton.qml  FileSelectionPanel.qml  MapButton.qml  MetaListView.qml  MetaMap.qml  MetaViewPanel.qml
content/src/: controller.cpp  filemodel.cpp  metamodel.cpp  metamodel.h
imports/: CMakeLists.txt
imports/qMeta/: CMakeLists.txt  qmldir
imports/qMeta/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
